--- a/Builds/VisualStudio2017/synth_App.vcxproj.filters
+++ b/Builds/VisualStudio2017/synth_App.vcxproj.filters
@@ -373,6 +373,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\Envelope.cpp">
+      <Filter>synth\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Filter.cpp">
+      <Filter>synth\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\Oscillator.cpp">
+      <Filter>synth\Source</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\MainComponent.cpp">
       <Filter>synth\Source</Filter>
     </ClCompile>
@@ -2127,6 +2136,15 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\Envelope.h">
+      <Filter>synth\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Filter.h">
+      <Filter>synth\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Oscillator.h">
+      <Filter>synth\Source</Filter>
+    </ClInclude>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h">
       <Filter>Juce Modules\juce_audio_basics\audio_play_head</Filter>
     </ClInclude>
